<resources>
    <string name="app_name">ex4</string>
    <string name="login_welcome">Good to see you again</string>
    <string name="register_welcome">Register here</string>
    <string name="already_registered">Already registered?</string>
    <string name="register_account">Don\'t have an account?</string>
    <string name="create">create new</string>
    <string name="username">Username</string>
    <string name="newMsg">New message here...</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="display_name">Display name</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="image">image</string>
    <string name="register">Register</string>
    <string name="new_contact">Add new contact</string>
    <string name="add">add</string>
    <string name="send">Send</string>
    <string name="BaseUrl">http://10.0.2.2:5000/api/</string>
    <string name="settings">Settings</string>
    <string name="address_text">The server address:</string>
    <string name="add_button">Add Button</string>
    <string name="save">Save</string>
    <string name="nothing">nothing</string>
    <string name="exit_chat" />
    <string name="logout" />
    <string name="blue" />
    <string name="close">close the page</string>
    <string name="choose_color">The color of the app:</string>
    <string name="default_notification_channel_id">1</string>


</resources>
