<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:gravity="center"
    android:orientation="vertical"

    tools:context=".pages.Register">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_welcome"
                android:textAlignment="center"
                android:textColor="@color/default_color"
                android:textSize="25sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="no"
                android:background="@drawable/pink_frame"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="no"
                android:background="@drawable/pink_frame"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="no"
                android:background="@drawable/pink_frame"
                android:drawableStart="@drawable/ic_confirm_password"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/display_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/pink_frame"
                android:drawableStart="@drawable/ic_display_name"
                android:drawablePadding="8dp"
                android:hint="@string/display_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black" />

            <RelativeLayout
                android:id="@+id/parentView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/default_color"
                    android:text="@string/open_gallery"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="15dp" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_alignTop="@id/gallery"
                    android:layout_toEndOf="@id/gallery"
                    android:contentDescription="@string/image"
                    android:gravity="right|end"
                    app:cornerRadius="50dp"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/default_color"
                android:text="@string/register"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/default_color"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintStart_toEndOf="@+id/signupText"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>