<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.Contacts">

    <ListView
        android:id="@+id/lstContacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="right"
        android:orientation="vertical"
        tools:ignore="MissingConstraints,RtlHardcoded">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginRight="10pt"
            android:backgroundTint="@color/default_color"
            android:contentDescription="@string/logout"
            android:src="@drawable/ic_logout"
            app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10pt"
        android:layout_marginRight="10pt"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/default_color"
        android:contentDescription="@string/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10pt"
        android:backgroundTint="@color/default_color"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/settings" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>