<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="64dp">

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/default_color"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_text"
                    android:textColor="@color/default_color"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    app:layout_constraintBaseline_toBaselineOf="@+id/address"
                    app:layout_constraintEnd_toStartOf="@+id/address"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:background="@drawable/pink_frame"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/server"
                    tools:ignore="LabelFor,MissingConstraints,RtlSymmetry"
                    android:paddingStart="8dp"
                    android:hint="@string/nothing"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose Color"
                    android:textSize="17sp"
                    android:textColor="@color/default_color"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp" />

                <Button
                    android:id="@+id/blueButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:backgroundTint="@color/blue_background"
                    android:text="@string/blue"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="15dp" />

                <Button
                    android:id="@+id/redButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/purple_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="15dp" />

                <Button
                    android:id="@+id/pinkButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:backgroundTint="@color/default_background"

                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:cornerRadius="15dp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/default_color"
            android:text="@string/save"
            android:textSize="18sp"
            app:cornerRadius="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
